--- a/views/lihat_produk.hbs
+++ b/views/lihat_produk.hbs
@@ -13,11 +13,11 @@
     <h1 style="text-align:center">CRUD Produk Arkademy | Fullstack Mobile batch 19</h1>
     <div class="container">
         <div>
-            <form action="/simpan" method="POST">
-                <input placeholder="Nama Produk" name="nama_produk">
-                <input placeholder="Jumlah Barang" name="jumlah">
-                <input placeholder="Harga" name="harga">
-                <input placeholder="keterangan" name="keterangan">
+            <form class="form-inline form-group" style="margin:20px" action="/simpan" method="POST">
+                <input class="form-control" placeholder="Nama Produk" name="nama_produk">
+                <input class="form-control" placeholder="Jumlah Barang" name="jumlah">
+                <input class="form-control" placeholder="Harga" name="harga">
+                <input class="form-control" placeholder="keterangan" name="keterangan">
                 <input class="btn btn-success btn-sm" type="submit">
             </form>
         </div>
