--- a/views/lihat_produk.hbs
+++ b/views/lihat_produk.hbs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 style="text-align:center">CRUD Produk Arkademy | Fullstack Mobile batch 19</h1>
+    <h1 style="text-align:center">CRUD Produk | NodeJS MySQL Express</h1>
     <div class="container">
         <div>
             <form class="form-inline form-group" style="margin:20px" action="/simpan" method="POST">
@@ -29,7 +29,7 @@
                     <th scope="col">Jumlah</th>
                     <th scope="col">Harga</th>
                     <th scope="col">Keterangan</th>
-                    <th scope="col">Aksi</th>
+                    <th scope="col">Pilihan Aksi</th>
                 </tr>
             </thead>
             <tbody>
